fixed night mode button position and button background in dark mode

--- a/style.css
+++ b/style.css
@@ -4,8 +4,13 @@
     /* outline: 1px solid red; */
 }
 
+body {
+    height: 100vh;
+
+}
+
 header {
-    margin-top: 2%;
+    padding-top: 2%;
     position: relative;
 }
 
@@ -17,8 +22,12 @@ header {
 
 #toggle-mode {
     position: absolute;
-    right: 4rem;
-    top: 0;
+    right: 5%;
+    top: 10%;
+    border-style: none;
+    width: 30px;
+    height: 30px;
+    background-color: white;
 }
 
 #player {
@@ -29,7 +38,7 @@ header {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-size: 1.7rem;
     text-align: center;
-    margin-bottom: 1%;
+    margin-bottom: 2%;
 }
 
 main {
@@ -74,12 +83,14 @@ main {
 
 /* dark mode */
 body.dark-mode {
-    background-color: #333333;
+    background-color: #404040;
     color: #ffffff;
 }
 
-button.dark-mode {
+#toggle-mode.dark-mode {
     background-color: #444444;
-    color: #ffffff;
 }
 
+/* #toggle-mode > * {
+    fill: white;
+} */
